miscelanneous fix